--- a/trailermarine-master (1)/trailermarine-master/style9.css
+++ b/trailermarine-master (1)/trailermarine-master/style9.css
@@ -59,10 +59,18 @@ a
 {
     height: 100px; /*altura*/
     width: 100%; /* largura*/
-    margin-top: -7%;
+    margin-top: -6%;
     padding-left: 90%;
 }
 
 .botao:hover{
     background-color: rgb(81, 189, 251);
+}
+
+.logo
+{
+    height: 100px; /*altura*/
+    width: 100%; /* largura*/
+    margin-top: -13%;
+    padding-left: 70%;
 }
